# spkan

./: .gitignore  LICENSE  README.md  pyproject.toml
kan_convolutional/: KANLinear.py  conv.py  convolution.py  cuda_tools.py
src/: conv.py  tests.py
src/spkan/: conv.py  cuda_tools.py  tests.py
src/spkan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spkan/modules/: second_neck.py
src/spkan/ops/: __init__.py  bsplines  bsplines.cu  bsplines_g.cpp  setup.py
