[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spkan"
version = "0.0.1a5"
authors = [
  { name="Mellon M. Zhang", email="meilongz@gatech.edu" },
]
description = "A drop-in replacement for sparse convolutions using Kolmogorov-Arnold Networks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "numpy",
    "spconv"
]
keywords = ['kan', 'sparse', 'convolutions', 'kolmogorov-arnold', 'submanifold']

[project.urls]
Homepage = "https://github.com/meilongzhang/spkan"
Issues = "https://github.com/meilongzhang/spkan/issues"